# agent-context-aware

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
agent_context_aware/: hosting.py  main.py
agent_context_aware/services/: azure_openai_service.py
tests/agent_context_aware/services/: test_azure_openai_service.py
